// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel keyframes extract keyframes basic 1`] = `
"import \\"./keyframes.test.emotion.css\\";

const rotate360 = \\"animation-rotate360-f35ahc\\";"
`;

exports[`babel keyframes extract keyframes basic 2`] = `
"@keyframes animation-rotate360-f35ahc { from {
            -webkit-transform: rotate(0deg);
            -ms-transform: rotate(0deg);
            transform: rotate(0deg);
          }
        
          to {
            -webkit-transform: rotate(360deg);
            -ms-transform: rotate(360deg);
            transform: rotate(360deg);
          } }"
`;

exports[`babel keyframes extract keyframes with interpolation 1`] = `
"
const rotate360 = keyframes(\\"animation-rotate360-9bsj7q\\", [\`{ from {
            -webkit-transform: rotate(0deg);
            -ms-transform: rotate(0deg);
            transform: rotate(0deg);
          }
        
          to {
            -webkit-transform: rotate(\${endingRotation});
            -ms-transform: rotate(\${endingRotation});
            transform: rotate(\${endingRotation});
          } }\`]);"
`;

exports[`babel keyframes inline keyframes basic 1`] = `
"
const rotate360 = keyframes(\\"animation-rotate360-10gy9ar\\", [\`{ from {
            -webkit-transform: rotate(0deg);
            -ms-transform: rotate(0deg);
            transform: rotate(0deg);
          }
          to {
            -webkit-transform: rotate(360deg);
            -ms-transform: rotate(360deg);
            transform: rotate(360deg);
          } }\`]);"
`;

exports[`babel keyframes inline keyframes with interpolation 1`] = `
"
const rotate360 = keyframes(\\"animation-rotate360-r2494l\\", [\`{ from {
            -webkit-transform: rotate(0deg);
            -ms-transform: rotate(0deg);
            transform: rotate(0deg);
          }
          to {
            -webkit-transform: rotate(\${endingRotation});
            -ms-transform: rotate(\${endingRotation});
            transform: rotate(\${endingRotation});
          } }\`]);"
`;
